[gd_scene load_steps=4 format=3 uid="uid://cxccxtypefyby"]

[ext_resource type="Script" path="res://entities/interactables/door.gd" id="1_80o8p"]
[ext_resource type="PackedScene" uid="uid://bgt7ph0knvasb" path="res://models/blast_door.tscn" id="1_m14io"]

[sub_resource type="BoxShape3D" id="BoxShape3D_amx5a"]
size = Vector3(6, 6, 6)

[node name="Door" type="Node3D"]
script = ExtResource("1_80o8p")

[node name="BlastDoor" parent="." instance=ExtResource("1_m14io")]

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_amx5a")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871558, 0, -0.0871558, 0.996195, 0, 1.8, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera3D"]

[node name="CutSceneBars" type="Control" parent="Camera3D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="ColorRect" parent="Camera3D/CanvasLayer/CutSceneBars"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="Bottom" type="ColorRect" parent="Camera3D/CanvasLayer/CutSceneBars"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12)

[node name="Lights" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.75)

[node name="Light" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
light_color = Color(1, 0.0862745, 0.25098, 1)
shadow_enabled = true

[node name="Light2" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8, 1, 0)
light_color = Color(1, 0.0862745, 0.25098, 1)
shadow_enabled = true

[node name="Light3" type="OmniLight3D" parent="Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.8, 1, 0)
light_color = Color(1, 0.0862745, 0.25098, 1)
shadow_enabled = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
